--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main id ="main">
-        <h1>My Product Design Handbook</h1>
+        <h1><p>🍔</p>My Product Design Handbook</h1>
         <p>Hey there! On this website, I hope to share my experiences as a Product Designer and the lessons I've learned through my Masters at the University of Michigan.</p>
         <p>You can also check out podcasts and books I'd recommend as well some of the design principles I follow. This is a great resource for anyone wanting to get into User Experience design.</p>
         <figure>
