--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My Product Design Handbook</title>
     <link rel="stylesheet" href="css/html5reset.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
