--- a/principles.html
+++ b/principles.html
@@ -29,13 +29,13 @@
             <figcaption>Picture of the word UX composed of illustrations.</figcaption>
         </figure>
         <figure>
-            <img src="images/principle-01.png" style="width:50%" alt="Image of the word UX spelled out using illustrations." />
+            <img src="images/principle-01.png" style="width:50%" alt="Image containing the word Principle 01" />
         </figure>
         <figure>
-            <img src="images/principle-02.png" style="width:50%" alt="Image of the word UX spelled out using illustrations." />
+            <img src="images/principle-02.png" style="width:50%" alt="Image containing the word Principle 02" />
         </figure>
         <figure>
-            <img src="images/principle-03.png" style="width:50%" alt="Image of the word UX spelled out using illustrations." />
+            <img src="images/principle-03.png" style="width:50%" alt="Image containing the word Principle 03" />
         </figure>
     </main>
     <footer>
