--- a/principles.html
+++ b/principles.html
@@ -25,7 +25,7 @@
         <p>On this page you'll find a list of design principles that I follow.</p>
         <p>I've curated this to provide guidance for designing ethically humane digital products through patterns focused on user-centred design.</p>
         <figure>
-            <img src="images/ux.jpeg" style="width:20%" alt="Image of the word UX spelled out using illustrations." />
+            <img src="images/ux.jpeg" style="width:20%" alt="Image of the word UX spelled out using black and white illustrations." />
             <figcaption>Picture of the word UX composed of illustrations.</figcaption>
         </figure>
         <figure>
