--- a/about.html
+++ b/about.html
@@ -25,11 +25,11 @@
         <p>Cynthia Augustine is a multidisciplinary designer from Cape Town, South Africa. .</p>
         <p>She loves creating meaningful digital experiences that are accessible, seamless and user-centric.</p>
         <figure>
-            <img src="images/cynthia-augustine.jpeg" style="width:20%" alt="A black and white picture of the creator of the website." />
+            <img src="images/cynthia-augustine.jpeg" style="width:20%" alt="A black and white picture of the creator of the website." >
             <figcaption>Image of Cynthia Augustine.</figcaption>
         </figure>
         <figure>
-            <img src="images/picture-of-me.jpg" style="width:20%" alt="A colour photo of girl at a football stadium" />
+            <img src="images/picture-of-me.jpg" style="width:20%" alt="A colour photo of girl at a football stadium" >
             <figcaption>A picture of myself at the Big House.</figcaption>
         </figure>
     </main>
