--- a/gallery.html
+++ b/gallery.html
@@ -26,40 +26,40 @@
             This gallery provides a glimpse into my experience at the Univeristy of Michigan's MSI program in UX Design and Research.
         </p>
         <figure>
-            <img src="images/contextual-inquiry-class.jpg" style="width:20%" alt="A black and white picture of a lecture room." />
+            <img src="images/contextual-inquiry-class.jpg" style="width:20%" alt="A black and white picture of a lecture room." >
             <figcaption>Picture taken in the Contextual Inquiry and Consulting Foundations class</figcaption>
         </figure>
 
         <figure>
-            <img src="images/zip-crit.jpg" style="width:20%" alt="A black and white picture of a student presenting in a lecture room." />
+            <img src="images/zip-crit.jpg" style="width:20%" alt="A black and white picture of a student presenting in a lecture room." >
             <figcaption>Picture taken during a Zip Crit presentation in the Intro to Interaction Design class.</figcaption>
         </figure>
         <figure>
-            <img src="images/lecture.jpeg" style="width:20%" alt="A black and white picture of a lecture room with a lecturer." />
+            <img src="images/lecture.jpeg" style="width:20%" alt="A black and white picture of a lecture room with a lecturer." >
             <figcaption>Picture taken during the first lecture of the semester.</figcaption>
         </figure>
         <figure>
-            <img src="images/group-work.jpg" style="width:20%" alt="A black and white picture of three people on a table talking." />
+            <img src="images/group-work.jpg" style="width:20%" alt="A black and white picture of three people on a table talking." >
             <figcaption>Picture taken of team members for Contexual Inquiry class.</figcaption>
         </figure>
         <figure>
-            <img src="images/team-picture.jpg" style="width:20%" alt="A black and white picture of four people taking a selfie." />
+            <img src="images/team-picture.jpg" style="width:20%" alt="A black and white picture of four people taking a selfie." >
             <figcaption>Picture taken of team members during observation exercise.</figcaption>
         </figure>
         <figure>
-            <img src="images/team-work.jpg" style="width:20%" alt="A black and white picture of a piece of paper with a table and mindmap." />
+            <img src="images/team-work.jpg" style="width:20%" alt="A black and white picture of a piece of paper with a table and mindmap." >
             <figcaption>Picture taken of work done by team for Intro to Interaction Design class</figcaption>
         </figure>
         <figure>
-            <img src="images/illustration.png" style="width:20%" alt="A picture of line illustrations" />
+            <img src="images/illustration.png" style="width:20%" alt="A picture of line illustrations" >
             <figcaption>Image of hand illustrations that I did for an observation task.</figcaption>
         </figure>
         <figure>
-            <img src="images/school-of-information.jpeg" style="width:20%" alt="A black and white picture of a tall building in Ann Arbor." />
+            <img src="images/school-of-information.jpeg" style="width:20%" alt="A black and white picture of a tall building in Ann Arbor." >
             <figcaption>Picture taken of UofM School of Information.</figcaption>
         </figure>
         <figure>
-            <img src="images/university-of-michigan.jpeg" style="width:20%" alt="A black and white picture of a university campus." />
+            <img src="images/university-of-michigan.jpeg" style="width:20%" alt="A black and white picture of a university campus." >
             <figcaption>School taken of University of Michigan's campus.</figcaption>
         </figure>
     </main>
