--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>My Product Design Handbook</title>
-    <link rel="stylesheet" href="css/html5reset.css" />
+    <link rel="stylesheet" href="css/html5reset.css" >
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
         <p>Hey there! On this website, I hope to share my experiences as a Product Designer and the lessons I've learned through my Masters at the University of Michigan.</p>
         <p>You can also check out podcasts and books I'd recommend as well some of the design principles I follow. This is a great resource for anyone wanting to get into User Experience design.</p>
         <figure>
-            <img src="images/girl-reading.png" style="width:20%" alt="Line drawing of girl with blue pants reading a book." />
+            <img src="images/girl-reading.png" style="width:20%" alt="Line drawing of girl with blue pants reading a book." >
             <figcaption>Picture of a girl reading a book.</figcaption>
         </figure>
     </main>
