--- a/principles.html
+++ b/principles.html
@@ -25,17 +25,17 @@
         <p>On this page you'll find a list of design principles that I follow.</p>
         <p>I've curated this to provide guidance for designing ethically humane digital products through patterns focused on user-centred design.</p>
         <figure>
-            <img src="images/ux.jpeg" style="width:20%" alt="Image of the word UX spelled out using black and white illustrations." />
+            <img src="images/ux.jpeg" style="width:20%" alt="Image of the word UX spelled out using black and white illustrations." >
             <figcaption>Picture of the word UX composed of illustrations.</figcaption>
         </figure>
         <figure>
-            <img src="images/principle-01.png" style="width:50%" alt="Image containing the word Principle 01" />
+            <img src="images/principle-01.png" style="width:50%" alt="Image containing the word Principle 01" >
         </figure>
         <figure>
-            <img src="images/principle-02.png" style="width:50%" alt="Image containing the word Principle 02" />
+            <img src="images/principle-02.png" style="width:50%" alt="Image containing the word Principle 02" >
         </figure>
         <figure>
-            <img src="images/principle-03.png" style="width:50%" alt="Image containing the word Principle 03" />
+            <img src="images/principle-03.png" style="width:50%" alt="Image containing the word Principle 03" >
         </figure>
     </main>
     <footer>
