--- a/ux-goodreads.html
+++ b/ux-goodreads.html
@@ -32,16 +32,16 @@
 
         </ul>
         <figure id="book1">
-            <img src="images/design-of-everday-things.png" class="image-overlay"style="width:20%" alt="Image of yellow book cover with a red kettle on it." />
+            <img src="images/design-of-everday-things.png" class="image-overlay" style="width:20%" alt="Image of yellow book cover with a red kettle on it." >
             <figcaption>Image of the book cover for the book titled Design of Everyday Things.</figcaption>
         </figure>
 
         <figure id="book2">
-            <img src="images/laws-of-ux.png" style="width:20%" alt="Image of a book cover with different patterns in various colors." />
+            <img src="images/laws-of-ux.png" style="width:20%" alt="Image of a book cover with different patterns in various colors." >
             <figcaption>Image of the book cover for the book titled Laws of UX.</figcaption>
         </figure>
         <figure id="book3">
-            <img src="images/interaction-design.png" style="width:20%" alt="Image of a book cover with a green background and colourful foreground." />
+            <img src="images/interaction-design.png" style="width:20%" alt="Image of a book cover with a green background and colourful foreground." >
             <figcaption>Image of the book cover for the textbook titled Interaction Design.</figcaption>
         </figure>
         <p>Podcasts section coming soon! </p>
