--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,25 @@
 ﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H8Z2N4SQDS"></script>
+    <script>window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-H8Z2N4SQDS');</script>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
-    <div class="skip"><a href="#main">Skip to Main Content</a></div>
-    <header>
+    <div class="skip flex-container"><a href="#main">Skip to Main Content</a></div>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ux-goodreads.html">Podcasts & Good Reads</a></li>
                 <li><a href="principles.html">My Design Principles</a></li>
@@ -19,51 +27,72 @@
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
-    </header>
     <main id="main">
-        <h1>My Gallery</h1>
-        <p>
-            This gallery provides a glimpse into my experience at the Univeristy of Michigan's MSI program in UX Design and Research.
-        </p>
-        <figure>
-            <img src="images/contextual-inquiry-class.jpg" style="width:20%" alt="A black and white picture of a lecture room." >
-            <figcaption>Picture taken in the Contextual Inquiry and Consulting Foundations class</figcaption>
-        </figure>
-
-        <figure>
-            <img src="images/zip-crit.jpg" style="width:20%" alt="A black and white picture of a student presenting in a lecture room." >
-            <figcaption>Picture taken during a Zip Crit presentation in the Intro to Interaction Design class.</figcaption>
-        </figure>
-        <figure>
-            <img src="images/lecture.jpeg" style="width:20%" alt="A black and white picture of a lecture room with a lecturer." >
-            <figcaption>Picture taken during the first lecture of the semester.</figcaption>
-        </figure>
-        <figure>
-            <img src="images/group-work.jpg" style="width:20%" alt="A black and white picture of three people on a table talking." >
-            <figcaption>Picture taken of team members for Contexual Inquiry class.</figcaption>
-        </figure>
-        <figure>
-            <img src="images/team-picture.jpg" style="width:20%" alt="A black and white picture of four people taking a selfie." >
-            <figcaption>Picture taken of team members during observation exercise.</figcaption>
-        </figure>
-        <figure>
-            <img src="images/team-work.jpg" style="width:20%" alt="A black and white picture of a piece of paper with a table and mindmap." >
-            <figcaption>Picture taken of work done by team for Intro to Interaction Design class</figcaption>
-        </figure>
-        <figure>
-            <img src="images/illustration.png" style="width:20%" alt="A picture of line illustrations" >
-            <figcaption>Image of hand illustrations that I did for an observation task.</figcaption>
-        </figure>
-        <figure>
-            <img src="images/school-of-information.jpeg" style="width:20%" alt="A black and white picture of a tall building in Ann Arbor." >
-            <figcaption>Picture taken of UofM School of Information.</figcaption>
-        </figure>
-        <figure>
-            <img src="images/university-of-michigan.jpeg" style="width:20%" alt="A black and white picture of a university campus." >
-            <figcaption>School taken of University of Michigan's campus.</figcaption>
-        </figure>
+        <header>
+            <h1>My Gallery</h1>
+            <p>
+                This gallery provides a glimpse into my experience at the Univeristy of Michigan's MSI program in UX Design and Research.
+            </p>
+        </header>
+        <div class="gallery">
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/contextual-inquiry-class.jpg" alt="A black and white picture of a lecture room.">
+                    <figcaption>Picture taken in the Contextual Inquiry and Consulting Foundations class</figcaption>
+                </figure>
+            </div>
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/zip-crit.jpg"  alt="A black and white picture of a student presenting in a lecture room.">
+                    <figcaption>Picture taken during a Zip Crit presentation in the Intro to Interaction Design class.</figcaption>
+                </figure>
+            </div>
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/lecture.jpeg" alt="A black and white picture of a lecture room with a lecturer.">
+                    <figcaption>Picture taken during the first lecture of the semester.</figcaption>
+                </figure>
+            </div>
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/group-work.jpg" alt="A black and white picture of three people on a table talking.">
+                    <figcaption>Picture taken of team members for Contexual Inquiry class.</figcaption>
+                </figure>
+            </div>
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/team-picture.jpg" alt="A black and white picture of four people taking a selfie.">
+                    <figcaption>Picture taken of team members during observation exercise.</figcaption>
+                </figure>
+            </div>
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/team-work.jpg" alt="A black and white picture of a piece of paper with a table and mindmap.">
+                    <figcaption>Picture taken of work done by team for Intro to Interaction Design class</figcaption>
+                </figure>
+            </div>
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/illustration.png" style="width:80%" alt="A picture of line illustrations">
+                    <figcaption>Image of hand illustrations that I did for an observation task.</figcaption>
+                </figure>
+            </div>
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/school-of-information.jpeg" style="width:80%" alt="A black and white picture of a tall building in Ann Arbor.">
+                    <figcaption>Picture taken of UofM School of Information.</figcaption>
+                </figure>
+            </div>
+            <div class="gallery-item">
+                <figure>
+                    <img src="images/university-of-michigan.jpeg" style="width:80%" alt="A black and white picture of a university campus.">
+                    <figcaption>School taken of University of Michigan's campus.</figcaption>
+                </figure>
+            </div>
+        </div>
     </main>
     <footer>
+        <p> &copy; Created by Cynthia Augustine 2022</p>
     </footer>
 </body>
 </html>
