--- a/ux-goodreads.html
+++ b/ux-goodreads.html
@@ -1,16 +1,25 @@
 ﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H8Z2N4SQDS"></script>
+    <script>window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-H8Z2N4SQDS');</script>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good Reads</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/84b6ce35d3.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class ="container">
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ux-goodreads.html" class="active-link">Podcasts & Good Reads</a></li>
                 <li><a href="principles.html">My Design Principles</a></li>
@@ -19,34 +28,40 @@
             </ul>
         </nav>
     </header>
-
     <main id="main">
-
         <h1>Podcasts & Good Reads</h1>
-        <p>Here's a couple of books I'd recommend reading. </p>
-        <p>Soon, you'll be able to click on the links to find books online if you wish to purchase them.</p>
+        <p>Here's a couple of books I'd recommend reading.Soon, you'll be able to click on the links to find books online if you wish to purchase them.</p>
         <ul>
-            <li><a href="#book1">Book 1: The Design of Everyday Things</a></li>
-            <li><a href="#book2">Book 2: Laws of UX</a></li>
-            <li><a href="#book3">Book 3: Interaction Design</a></li>
-
+            <li><a href="#book1"><i class="fa-solid fa-book"></i>Book 1: The Design of Everyday Things</a></li>
+            <li><a href="#book2"><i class="fa-solid fa-book"></i>Book 2: Laws of UX</a></li>
+            <li><a href="#book3"><i class="fa-solid fa-book"></i>Book 3: Interaction Design</a></li>
         </ul>
-        <figure id="book1">
-            <img src="images/design-of-everday-things.png" class="image-overlay" style="width:20%" alt="Image of yellow book cover with a red kettle on it." >
+        <figure class="book" id="book1">
+            <img src="images/design-of-everday-things.png" class="image-overlay" style="width:50%" alt="Image of a yellow book cover with a red kettle on it.">
             <figcaption>Image of the book cover for the book titled Design of Everyday Things.</figcaption>
+            <p>"The Design of Everyday Things shows that good, usable design is possible. The rules are simple: make things visible, exploit natural relationships that couple function and control, and make intelligent use of constraints. The goal: guide the user effortlessly to the right action on the right control at the right time."</p>
         </figure>
 
-        <figure id="book2">
-            <img src="images/laws-of-ux.png" style="width:20%" alt="Image of a book cover with different patterns in various colors." >
+        <figure class="book" id="book2">
+            <img src="images/laws-of-ux.png" style="width:50%" alt="Image of a book cover with different patterns in various colors.">
             <figcaption>Image of the book cover for the book titled Laws of UX.</figcaption>
+            <p>
+                "Every designer today should learn the fundamentals of psychology. Instead of forcing users to conform to a product design or experience, designers need to learn how users behave and interact with various digital interfaces.
+                This guide provides some key principles from psychology to help you design more intuitive, human-centered products and experiences. Humans have an underlying blueprint for how we perceive and process the world around us, and through simple lessons in psychology, this guide will help you define this blueprint.
+            "</p>
         </figure>
-        <figure id="book3">
-            <img src="images/interaction-design.png" style="width:20%" alt="Image of a book cover with a green background and colourful foreground." >
+        <figure class="book" id="book3">
+            <img src="images/interaction-design.png" style="width:50%" alt="Image of a book cover with a green background and colourful foreground.">
             <figcaption>Image of the book cover for the textbook titled Interaction Design.</figcaption>
+            <p>"Hugely popular with students and professionals alike, the Fifth Edition of Interaction Design is an ideal resource for learning the interdisciplinary skills needed for interaction design, human-computer interaction, information design, web design, and ubiquitous computing. New to the fifth edition: a chapter on data at scale, which covers developments in the emerging fields of 'human data interaction' and data analytics. The chapter demonstrates the many ways organizations manipulate, analyze, and act upon the masses of data being collected with regards to human digital and physical behaviors, the environment, and society at large."</p>
         </figure>
         <p>Podcasts section coming soon! </p>
+        <aside>
+            <p>Testing 123</p>
+        </aside>
     </main>
     <footer>
+        <p> &copy; Created by Cynthia Augustine 2022</p>
     </footer>
 </body>
 </html>
