--- a/ux-goodreads.html
+++ b/ux-goodreads.html
@@ -41,7 +41,9 @@
             <figcaption>Image of the book cover for the book titled Design of Everyday Things.</figcaption>
             <p>"The Design of Everyday Things shows that good, usable design is possible. The rules are simple: make things visible, exploit natural relationships that couple function and control, and make intelligent use of constraints. The goal: guide the user effortlessly to the right action on the right control at the right time."</p>
         </figure>
-
+            <aside>       
+                <p>Want to know more about the author, Don Norman? Checkout his website here: <a href="https://jnd.org"></a></p>
+            </aside>
         <figure class="book" id="book2">
             <img src="images/laws-of-ux.png" style="width:50%" alt="Image of a book cover with different patterns in various colors.">
             <figcaption>Image of the book cover for the book titled Laws of UX.</figcaption>
@@ -56,9 +58,6 @@
             <p>"Hugely popular with students and professionals alike, the Fifth Edition of Interaction Design is an ideal resource for learning the interdisciplinary skills needed for interaction design, human-computer interaction, information design, web design, and ubiquitous computing. New to the fifth edition: a chapter on data at scale, which covers developments in the emerging fields of 'human data interaction' and data analytics. The chapter demonstrates the many ways organizations manipulate, analyze, and act upon the masses of data being collected with regards to human digital and physical behaviors, the environment, and society at large."</p>
         </figure>
         <p>Podcasts section coming soon! </p>
-        <aside>
-            <p>Testing 123</p>
-        </aside>
     </main>
     <footer>
         <p> &copy; Created by Cynthia Augustine 2022</p>
