--- a/ux-goodreads.html
+++ b/ux-goodreads.html
@@ -42,7 +42,7 @@
             <p>"The Design of Everyday Things shows that good, usable design is possible. The rules are simple: make things visible, exploit natural relationships that couple function and control, and make intelligent use of constraints. The goal: guide the user effortlessly to the right action on the right control at the right time."</p>
         </figure>
             <aside>       
-                <p>Want to know more about the author, Don Norman? Checkout his website here: <a href="https://jnd.org"></a></p>
+                <p>Want to know more about the author, Don Norman? Check out his website by clicking <a href="https://jnd.org"> here:</a></p>
             </aside>
         <figure class="book" id="book2">
             <img src="images/laws-of-ux.png" style="width:50%" alt="Image of a book cover with different patterns in various colors.">
